checkbox redio button alignment issue fixed for mobile device

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -789,6 +789,15 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
          padding-right: 30% !important;
     }
 }
-
-
-
+.checkbox input[type=checkbox], .checkbox input[type=radio] {
+    position: absolute;
+    margin-top: 7px;
+    margin-right: -20px;
+}
+.checkbox-inline input[type=checkbox], .radio-inline input[type=radio] {
+    margin-left: 8px;
+    margin-top: 5px;
+}
+.checkbox-inline, .radio-inline {
+     padding-left: 5px; 
+}
